# mcp-discord

./: .dockerignore  .gitignore  AGENTS.md  BUILD.md  DOCKER_NIX_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  discord_mcp.py  docker-compose.yml  flake.nix  install.sh  package.json  pyproject.toml  tsconfig.json  verify.sh  webhooks.json.template
.github/: dependabot.yml  pull_request_template.md
.github/rulesets/: protect-branches.json  require-pull-request-develop.json  require-pull-request.json
.github/workflows/: release.yml
docs/: IMPLEMENTATION_SUMMARY.md  TECHNICAL_DESIGN.md  TESTING_GUIDE.md
src/: constants.ts  index.ts
src/tools/: addWebhook.ts  listWebhooks.ts  removeWebhook.ts  sendAnnouncement.ts  sendChangelog.ts  sendMessage.ts  sendTeaser.ts
src/types/: enums.ts  interfaces.ts  schemas.ts
src/utils/: embed.ts  errors.ts  storage.ts  webhook.ts
